Add reference-organ-scene doc to openApi
